--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.3.0
 docstring-parser==0.15
+flask==3.0.0
+flask-cors==4.0.0
 idna==3.10
 leetscrape==1.0.1
 lxml==6.0.2
@@ -11,7 +13,7 @@ markdownify==0.11.6
 marko==1.3.1
 mypy_extensions==1.1.0
 numpy==2.3.3
-pandas==2.2.3
+pandas>=1.5.2,<2.0.0
 pathspec==0.12.1
 platformdirs==4.4.0
 pydantic==1.10.24
