--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ markdownify==0.11.6
 marko==1.3.1
 mypy_extensions==1.1.0
 numpy==2.3.3
-pandas>=1.5.2,<2.0.0
+pandas==1.5.3
 pathspec==0.12.1
 platformdirs==4.4.0
 pydantic==1.10.24
