--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,8 @@ tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+setuptools==69.5.1
+wheel==0.41.2
+pandas==1.5.3
+numpy==1.24.4
+setuptools==69.5.1
