--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pathspec==0.12.1
 platformdirs==4.4.0
 pydantic==1.10.24
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.2
 requests==2.32.5
 setuptools==69.5.1
