--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ markdownify==0.11.6
 marko==1.3.1
 mypy_extensions==1.1.0
 numpy==1.24.4
+openai==1.45.0
 pandas==1.5.3
 pathspec==0.12.1
 platformdirs==4.4.0
